public/styles.css
:root {
    --primary-color: #ff69b4;
    --secondary-color: #ff1493;
    --background-color: #ffefd5;
    --container-background: #fff;
    --container-shadow: rgba(0, 0, 0, 0.1);
    --form-background: #fffacd;
    --text-color: #fff;
    --highlight-color: gold;
}

body {
    font-family: 'Comic Sans MS', cursive, sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--background-color);
}

main {
    padding: 2em;
}

.site-header {
    background-color: var(--primary-color);
    color: var(--text-color);
    padding: 10px 0;
    text-align: center;
}

.site-header .site-identity h1 a {
    color: var(--text-color);
    text-decoration: none;
}

.site-navigation .nav {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
}

.site-navigation .nav li {
    margin: 0 15px;
}

.site-navigation .nav li a {
    color: var(--text-color);
    text-decoration: none;
}

.site-footer {
    background-color: var(--primary-color);
    color: var(--text-color);
    text-align: center;
    padding: 10px 0;
    position: fixed;
    width: 100%;
    bottom: 0;
}

.container {
    max-width: 800px;
    margin: 20px auto;
    padding: 20px;
    background-color: var(--container-background);
    box-shadow: 0 0 10px var(--container-shadow);
    border-radius: 10px;
}

.title {
    font-size: 24px;
    margin: .5em 0 1em 1.5em;
    color: var(--primary-color);
}

.form-text {
  margin-left: 2.5em;
}


#blogForm {
  margin-top: 2.5em;
  background: var(--form-background);
  padding: 2em;
  border-radius: 15px;

}

legend {
  font-size: 2em;
  font-weight: bold;
  color: var(--primary-color);
  margin-bottom: .5em;

}

fieldset {
    border: none;
    margin: 0;
    padding: 0;
    
}

fieldset label {
    font-size: 1.2em;
    display: block;
    margin-bottom: .25em;
    color: var(--primary-color);
}

fieldset input[type="text"],
fieldset textarea {
    font-family: 'Comic Sans MS', cursive, sans-serif;
    font-size: 16px;
    width: 98%;
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid grey;
    border-radius: 4px;
    background: #ffd1e1;
}

fieldset input[type="submit"] {
    background-color: var(--primary-color);
    color: var(--text-color);
    border: none;
    padding: 10px 20px;
    cursor: pointer;
    border-radius: 4px;
}

fieldset input[type="submit"]:hover {
    background-color: var(--secondary-color);
}

.blog-number {
    display: none;
}

.blog-card {
    border: 1px solid #ccc;
    padding: 20px;
    margin-bottom: 20px;
    border-radius: 10px;
    background-color: var(--form-background);
    display: flex;
    flex-direction: column;
}

.blog-header {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
}

.blog-image {
    max-width: 150px;
    margin-right: 20px;
    border-radius: 10px;
}

.blog-content {
    flex: 1;
}

.blog-card h4 {
    margin-top: 0;
    color: var(--primary-color);
}

.blog-card .btn-wrapper {
    display: flex;
    justify-content: space-between;
    margin-top: auto;
}

.blog-card .delete-btn,
.blog-card .edit-btn,
.blog-card .pin-btn, #submitBtn {
    background-color: var(--primary-color);
    color: var(--text-color);
    border: none;
    padding: 5px 10px;
    cursor: pointer;
    border-radius: 4px;
    text-decoration: none;
    font-family: 'Comic Sans MS', cursive, sans-serif;
    font-size: 14px;
}

.blog-card .delete-btn:hover,
.blog-card .edit-btn:hover,
.blog-card .pin-btn:hover, #submitBtn:hover {
    background-color: var(--secondary-color);
}

.pinned-blog {
    border: 2px solid var(--highlight-color); /* Highlight pinned blogs with a gold border */
    background-color: var(--form-background); /* Lighter background for pinned blogs */
    animation: slideIn 0.5s ease-in-out;
}

@keyframes slideIn {
    0% {
        opacity: 0;
        transform: translateY(-20px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

